scaffold/typescript-go-main/testdata/baselines/reference/submodule/conformance/jsdocAugmentsMissingType.errors.txt
/a.js(2,14): error TS8023: JSDoc '@augments ' does not match the 'extends A' clause.
/a.js(2,14): error TS1003: Identifier expected.


==== /a.js (2 errors) ====
    class A { constructor() { this.x = 0; } }
    /** @augments */
                 
!!! error TS8023: JSDoc '@augments ' does not match the 'extends A' clause.
                 ~
!!! error TS1003: Identifier expected.
    class B extends A {
        m() {
            this.x
        }
    }
    